# LLM-Hub

./: .gitignore  LICENSE  PLAYSTORE_DESCRIPTION.txt  README.md  gradle.properties  iOS_IMPLEMENTATION.md  settings.gradle.kts  start_llm_hub.ps1
app/src/main/cpp/: CMakeLists.txt  llm-hub-jni.cpp
firmware/main/: CMakeLists.txt  app_main.c  audio_i2s.c  ble_transport.c  mimobot_ids.h  opus_codec.c
ios/runanywhere-sdks-latest/: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .syncpackrc.json  .yarnrc.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Package.swift  README.md  SECURITY.md  jitpack.yml  package.json  renovate.json  run  run.bat
ios/runanywhere-sdks-latest/.github/workflows/: auto-tag.yml  check-no-pii-logging.yml  idl-drift-check.yml  legacy-files-blocklist.yml  pr-build.yml  release.yml  secret-scan.yml
ios/runanywhere-sdks-latest/Playground/: README.md
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/: CMakeLists.txt  Dockerfile  README.md  build.sh
ios/runanywhere-sdks-latest/Playground/on-device-browser-agent/: README.md
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/: CMakeLists.txt  Dockerfile  README.md  build.sh
ios/runanywhere-sdks-latest/cmake/: platform.cmake  plugins.cmake  protobuf.cmake  sanitizers.cmake
ios/runanywhere-sdks-latest/dependencies/: versions.json
ios/runanywhere-sdks-latest/engines/: .clang-format  AGENTS.md  CMakeLists.txt
ios/runanywhere-sdks-latest/engines/cloud/: CMakeLists.txt  cloud_stt_provider.h  rac_backend_cloud_register.cpp  rac_plugin_entry_cloud.cpp  rac_static_register_cloud.cpp  rac_stt_cloud.cpp
ios/runanywhere-sdks-latest/engines/common/: rac_engine_device_type.h  rac_engine_jni_bridge.h  rac_engine_sibling_loader.h  rac_engine_stt_types.h  rac_engine_unavailable.h
ios/runanywhere-sdks-latest/engines/coreml/: CMakeLists.txt  rac_diffusion_coreml.h  rac_diffusion_coreml.mm  rac_plugin_entry_coreml.cpp  rac_static_register_coreml.cpp
ios/runanywhere-sdks-latest/engines/llamacpp/: CMakeLists.txt  llamacpp_backend.cpp  llamacpp_backend.h  llamacpp_stop_helpers.h  rac_backend_llamacpp_register.cpp  rac_llamacpp_vlm_ops.cpp  rac_llm_llamacpp.cpp  rac_plugin_entry_llamacpp.cpp  rac_static_register_llamacpp.cpp  rac_vlm_llamacpp.cpp
ios/runanywhere-sdks-latest/engines/mlx/: CMakeLists.txt  mlx_bundle_policy.h  rac_backend_mlx_register.cpp  rac_mlx_callbacks_internal.h  rac_mlx_engine.cpp  rac_static_register_mlx.cpp
ios/runanywhere-sdks-latest/engines/onnx/: CMakeLists.txt  onnx_embedding_provider.cpp  onnx_embedding_provider.h  rac_backend_onnx_register.cpp  rac_onnx_embeddings_register.cpp  rac_plugin_entry_onnx.cpp  rac_static_register_onnx.cpp
ios/runanywhere-sdks-latest/engines/qhexrt/: CMakeLists.txt  qhexrt_backend.h  qhexrt_bundle_policy.h  qhexrt_device_capability.cpp  qhexrt_diffusion_ops.cpp  qhexrt_embeddings_ops.cpp  qhexrt_llm_ops.cpp  qhexrt_model_catalog.cpp  qhexrt_model_catalog_internal.h  qhexrt_request_cancellation.h  qhexrt_session.cpp  qhexrt_session.h  qhexrt_stt_ops.cpp  qhexrt_tts_ops.cpp  qhexrt_vlm_ops.cpp  rac_backend_qhexrt_register.cpp  rac_plugin_entry_qhexrt.cpp  rac_static_register_qhexrt.cpp
ios/runanywhere-sdks-latest/engines/sherpa/: CMakeLists.txt  rac_backend_sherpa_register.cpp  rac_plugin_entry_sherpa.cpp  rac_static_register_sherpa.cpp  rac_stt_sherpa.cpp  rac_stt_sherpa.h  rac_tts_sherpa.cpp  rac_tts_sherpa.h  rac_vad_sherpa.cpp  rac_vad_sherpa.h  sherpa_backend.cpp  sherpa_backend.h
ios/runanywhere-sdks-latest/idl/: chat.proto  component_types.proto  device_info.proto  diffusion_options.proto  download_service.proto  embeddings_options.proto  errors.proto  hardware_profile.proto  hybrid_router.proto  lifecycle_service.proto  llm_options.proto  llm_service.proto  logging.proto  lora_options.proto  model_types.proto  pipeline.proto  plugin_loader.proto  rac_options.proto  rag.proto  router.proto  sdk_events.proto  sdk_init.proto  solutions.proto  storage_types.proto  structured_output.proto  stt_options.proto  thinking_tag_pattern.proto  tool_calling.proto  tts_options.proto  vad_options.proto  vlm_options.proto  voice_agent_service.proto  voice_events.proto
ios/runanywhere-sdks-latest/idl/codegen/: CONVENIENCE_CODEGEN_DESIGN.md  _convenience_common.py  ci-drift-check.sh  generate_all.sh  generate_cpp.sh  generate_dart.sh  generate_dart_convenience.py  generate_kotlin.sh  generate_kotlin_convenience.py  generate_streams.sh  generate_swift.sh  generate_swift_convenience.py  generate_swift_modality_abi.py  generate_ts.sh  generate_ts_convenience.py  swift-modality-abi.yaml
ios/runanywhere-sdks-latest/runtimes/: AGENTS.md  CMakeLists.txt
ios/runanywhere-sdks-latest/runtimes/coreml/: CMakeLists.txt  rac_runtime_coreml.h  rac_runtime_coreml.mm
ios/runanywhere-sdks-latest/runtimes/cpu/: CMakeLists.txt  rac_runtime_cpu.cpp  rac_runtime_entry_cpu.h
ios/runanywhere-sdks-latest/runtimes/onnxrt/: CMakeLists.txt  rac_runtime_onnxrt.cpp  rac_runtime_onnxrt.h
ios/runanywhere-sdks-latest/scripts/: README.md
ios/runanywhere-sdks-latest/scripts/release/: rewrite_npm_package.py  sync-versions.sh  validate-artifact.sh
ios/runanywhere-sdks-latest/scripts/setup/: detect-mode.sh  doctor.sh  setup-toolchain.sh  setup.sh
ios/runanywhere-sdks-latest/scripts/validation/: README.md  _validation_lib.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-cli/: AGENTS.md  CMakeLists.txt  README.md
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  VERSIONS
ios/runanywhere-sdks-latest/sdk/runanywhere-flutter/: .fvmrc  .gitignore  AGENTS.md  README.md  analysis_options.yaml  pubspec.yaml
ios/runanywhere-sdks-latest/sdk/runanywhere-kotlin/: .gitignore  AGENTS.md  README.md  build.gradle.kts  consumer-rules.pro  detekt.yml  gradle.lockfile  proguard-rules.pro  settings.gradle.kts
ios/runanywhere-sdks-latest/sdk/runanywhere-react-native/: .gitignore  .yarnrc.yml  AGENTS.md  README.md  eslint.config.mjs  (+2 more)
(+2074 files in other folders)
